<resources>
    <string name="app_name">Click and Tables</string>
    <string name="empty_description">No description available.</string>
    <string name="login">Вход</string>
    <string name="phone_number">Телефонный номер</string>
    <string name="mail">e-mail</string>
    <string name="name">Имя</string>
    <string name="signup">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="my_trips">MY TRIPS</string>
    <string name="transport">TRANSPORT</string>
    <string name="navigation_drawer_open">Travel Guide</string>
    <string name="navigation_drawer_close">Travel Guide</string>
    <string name="hotel">HOTEL BOOKING</string>
    <string name="online_Shopping">ONLINE SHOPPING</string>
    <string name="real_time_locator">REAL TIME LOCATOR</string>
    <string name="search_a_city">Search a city...</string>
    <string name="popular_cities">Most Popular Cities</string>
    <string name="sample_state">Delhi</string>
    <string name="max_text">max</string>
    <string name="min_text">min</string>
    <string name="fun_facts">Fun Facts</string>
    <string name="text_title">Title</string>
    <string name="add_trip">Add trip</string>
    <string name="locate">Locate</string>
    <string name="more">More</string>
    <string name="title_activity_maps">Map</string>
    <string name="Iam">Я</string>
    <string name="title_activity_paket">PaketActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_packet">PacketActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="time">Время с</string>
    <string name="times">Время по</string>
    <string name="data">Дата</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Main">Главная</string>
    <string name="Profile">Профиль</string>
    <string name="Analitiks">Статистика</string>
    <string name="SignOut">Выход</string>
    <string name="pass">Сменить пароль</string>

    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
