<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@drawable/main"
            android:title="@string/Main" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/Profile" />
        <item
            android:id="@+id/analitics"
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/Analitiks" />
        <!--<item-->
            <!--android:id="@+id/nav_utility"-->
            <!--android:icon="@drawable/ic_share_black_24dp"-->
            <!--android:title="Utilities" />-->


    </group>

    <item android:title="Extras">
        <menu>

            <!--<item-->
                <!--android:id="@+id/nav_changecity"-->
                <!--android:icon="@drawable/ic_settings_black_24dp"-->
                <!--android:title="Change Source/Destination" />-->
            <!--<item-->
                <!--android:id="@+id/nav_emergency"-->
                <!--android:icon="@drawable/ic_announcement_black_24dp"-->
                <!--android:title="Emergency Contacts" />-->

            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/SignOut" />

        </menu>
    </item>

</menu>